# TreeHacks2026

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RTMS_SETUP.md  electron.vite.config.ts  package-lock.json  package.json  prompt.md  pyproject.toml  render.yaml  tailwind.config.js  test-student.js  tsconfig.json
backend/: .env.example  app.py  requirements.txt  run_chatbot_client.py
demo-ng/: narration_scripts.json  render_results.json  scene_plan.json  transcript.txt
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INDEX.md  INSIGHTS.md  NEXT_STEPS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  POCKET_TTS.md  QUICKSTART.md  QUICK_START.md  QUIZ_INTEGRATION.md  README.md  ZOOM_BOT_ARCHITECTURE.md
emotion-service/: .env.example  app.py  emotion_state.py  modal_model.py  requirements.txt
expression-dashboard/: README.md  app.py  pyproject.toml
expression-dashboard/static/: index.html
prompts/: correct_code.txt  generate_code.txt  generate_narration.txt  generate_quiz.txt  manim_cheat_sheet.txt  split_scenes.txt
rtms-service/: .env.example  config.js  deepgramService.js  heygenBridge.js  index.js  package-lock.json  package.json  webhookManager.js
rtms-zoom-official/: .gitignore  README.md  chatWithOpenrouter.js  config.js  deepgramService.js  frontendWss.js  index.js  mediaMessageHandler.js  package-lock.json  package.json  signalingSocket.js
scripts/: avatar.js  compile_animation_attempts.sh  continue_pipeline_from_narrations.py
src/: cli.py  download.py  llm.py  pipeline.py  render.py  transcribe.py  voice.py
zoom-bot-service/: .env.example  QUICK-START.md  README.md  auto-test-jwt.js  auto-test.js  debug-heygen-api.js  debug-zoom-page.js  heygen-bot-v2.js  heygen-camera-bot.js  heygen-fake-camera.js  heygen-livekit-bot.js  heygen-screenshare.js  heygen-simple.js  heygen-with-context.js  heygen-zoom-bot.js  heygen-zoom-working.js  join-as-guest.js  join-meeting-test.js  join-with-heygen-v2.js  join-with-heygen.js  minimal-test.ts  package-lock.json  package.json  simple-join-test.js  test-bot-deploy.js  test-create-join.js  test-credentials.js  test-join.js  test-playwright.js  test-visual.js  (+1 more)
(+169 files in other folders)
