[project]
name = "theo-manim"
version = "0.1.0"
description = "Generate 3Blue1Brown-style Manim videos from lecture transcripts"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "dedalus_labs",
    "deepgram-sdk>=5.3.2",
    "fastapi>=0.129.0",
    "fer>=22.5.1",
    "greenlet>=3.3.1",
    "httpx",
    "manim==0.19.2",
    "numpy>=1.26.0",
    "openai>=2.21.0",
    "opencv-python>=4.8.0",
    "pocket-tts>=1.0.3",
    "python-dotenv>=1.2.1",
    "scipy",
    "silero-vad>=6.2.0",
    "sqlalchemy>=2.0.46",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "yt-dlp>=2026.2.4",
]
